# sistemas-distribuidos

./: .gitignore  README.md
atividade-01/auction_system/: Cargo.toml
atividade-01/auction_system/auction-client/: Cargo.toml
atividade-01/auction_system/auction-client/keys/: client_0  client_1
atividade-01/auction_system/auction-client/src/: cli.rs  command.rs  main.rs  models.rs  tasks.rs
atividade-01/auction_system/auction-srv/: Cargo.toml
atividade-01/auction_system/auction-srv/src/: auction.rs  cli.rs  main.rs  models.rs  tasks.rs
atividade-01/auction_system/bid-srv/: Cargo.toml
atividade-01/auction_system/bid-srv/keys/: client_0  client_1
atividade-01/auction_system/bid-srv/src/: bid.rs  constants.rs  main.rs  models.rs  tasks.rs
atividade-01/auction_system/consumer/: Cargo.toml
atividade-01/auction_system/consumer/src/: main.rs
atividade-01/auction_system/notification-srv/: Cargo.toml
atividade-01/auction_system/notification-srv/src/: main.rs  models.rs  tasks.rs
atividade-01/auction_system/publisher/: Cargo.toml
atividade-01/auction_system/publisher/src/: main.rs
atividade-01/auction_system/shared/: Cargo.toml
atividade-01/auction_system/shared/src/: lib.rs  models.rs
atividade-01/auction_system/src/: main.rs
atividade-01/docs/bid-srv/: bid-srv_task_init_auction.drawio  top_level_messages.drawio
atividade-02/: requirements.txt
atividade-02/docs/: diagrams.drawio
atividade-02/src/: peer.py
atividade-03/auction_system/: Cargo.toml
atividade-03/auction_system/auction-client/: Cargo.toml
atividade-03/auction_system/notification-srv/: Cargo.toml
atividade-03/auction_system/shared/: Cargo.toml
(+11 files in other folders)
