[package]
name = "auction-client"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "3.2.1"
tokio = { version = "1", features = ["full"] }
futures-lite = "2"
rsa = { version = "0.9.8", features = ["pem"] }
pkcs8 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
chrono = "0.4"
