[package]
name = "auction-srv"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "3.2.1"
tokio = { version = "1", features = ["full"] }
futures-lite = "2"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = {path = "../shared"}

[profile.dev]
debug = true