[package]
name = "bid-srv"
version = "0.1.0"
edition = "2024"

[dependencies]
lapin = "3.2.1"
tokio = { version = "1", features = ["full"] }
futures-lite = "2"
rsa = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
base64 = "0.22.1"
shared = {path = "../shared"}

[profile.dev]
debug = true